catalytic_table_to_struct/example/src/non_compiling_code/failing_wrong_type_primitive.stderr
error[E0277]: the trait bound `i32: From<&str>` is not satisfied
 --> src/non_compiling_code/failing_wrong_type_primitive.rs
  |
  |     query!("select * from test_table where b = ? and c = ?", b, b);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `i32`
  |
  = help: the following other types implement trait `From<T>`:
            `i32` implements `From<bool>`
            `i32` implements `From<i16>`
            `i32` implements `From<i8>`
            `i32` implements `From<socket2::Domain>`
            `i32` implements `From<socket2::Protocol>`
            `i32` implements `From<socket2::Type>`
            `i32` implements `From<statement::PageSize>`
            `i32` implements `From<u16>`
          and $N others
  = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
